--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>order</module>
-        <module>stock</module>
+        <module>stock1-nacos</module>
         <module>order-nacos</module>
-        <module>stock-nacos</module>
+        <module>stock2-nacos</module>
+        <module>order-openFeign</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.7.RELEASE</version>
+        <version>2.3.12.RELEASE</version>
         <relativePath/>
     </parent>
     <groupId>com.specter</groupId>
@@ -44,6 +45,13 @@
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>2.2.7.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Hoxton.SR12</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
