--- a/stock1-nacos/src/main/resources/application.yml
+++ b/stock1-nacos/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 server:
-  port: 8082
+  port: 8085
 spring:
   application:
-    name: order-service
+    name: stock-service
   cloud:
     nacos:
-      server-addr: 127.0.0.1:8848
       discovery:
+        server-addr: 127.0.0.1:8848
         username: nacos
         password: nacos
         namespace: public
