--- a/stock2-nacos/src/main/resources/application.yml
+++ b/stock2-nacos/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8086
 spring:
   application:
-    name: stockNacos
+    name: stock-service
   cloud:
     nacos:
       server-addr: 127.0.0.1:8848
