xxl-job分布式定时任务

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>nacos-config</module>
         <module>gateway</module>
         <module>authority</module>
+        <module>sentinel</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
