--- a/stock-nacos/pom.xml
+++ b/stock-nacos/pom.xml
@@ -37,6 +37,11 @@
             <version>2.2.2</version>
         </dependency>
         <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
